--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/功能&结构/结构.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/功能&结构/结构.md
@@ -13,6 +13,8 @@
 
 <ul>
 
+ALU+R+CT
+暂+A G P+移位
 - 运算器主要组成：
   - 算术逻辑单元（ALU）
   - 暂存寄存器
@@ -31,7 +33,10 @@
 
 ###  <span style="color: Gold;">控制<span style="color: silver;">器 <span style="color: Gold;">C</span>U  
 
+
 <ul>
+
+P I I+ MAR MDR +时序、微操作
 
 - 控制器主要组成：
   - 程序计数器（PC）
