rem_CPU(R)+test_1/2(过了一遍,待整理excel)

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/功能&结构/结构.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/功能&结构/结构.md
@@ -36,12 +36,12 @@ ALU+R+CT
 
 <ul>
 
-P I I+ MAR MDR +时序、微操作
+PC I<span style="color: LimeGreen;">R</span> I<span style="color: RoyalBlue;">D</span>+ MAR MDR +时序、微操作
 
 - 控制器主要组成：
   - 程序计数器（PC）
-  - 指令寄存器（IR）
-  - 指令译码器（ID）
+  - 指令R（I<span style="color: LimeGreen;">R</span>）
+  - 指令译码器（I<span style="color: RoyalBlue;">D</span>）
   - 存储器地址寄存器（MAR）
   - 存储器数据寄存器（MDR）
   - 时序电路
