--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/功能.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/功能.md
@@ -17,7 +17,7 @@
 
 - <span style="color: silver;"><span style="color: LightSkyBlue;">数据</span><span style="color: gray;">通路</span>
   - 定义
-    - 数据在指令执行过程中的路径及其经过的部件
+    - 数据在指令执行过程中的<span style="color: LightSkyBlue;">路径</span>及其经过的部件
   - 组成<span style="color: gray;">部件</span>
     - ALU
     - 通用寄存器
