swiftrem_指令执行(T_data_flow_处理器) //下次有test相关 把test放前面

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/指令执行/指令执行方案.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/指令执行/指令执行方案.md
@@ -8,10 +8,8 @@
   - 每个步骤完成指令的一部分功能
   - 几个步骤依次执行完成指令的全部功能
 - 指令执行步骤的安排方案
-  - 不同处理器采用不同方案
-    - 单周期处理器
-    - 多周期处理器
-    - 流水线处理器
+  - 不同处理器use不同方案
+
 >pro：单周期和多周期CPU的CPI（2020）  
 
 ###  <span style="color: silver;"> <span style="color: LimeGreen;">单</span>T处理器  
@@ -25,8 +23,8 @@
 <ul>
 
 - 指令执行特点
-  - 所有指令使用 <span style="color: black;">相同</span> <span style="color: LimeGreen;">执行</span>时间完成
-    - 每条指令在一个时钟周期内完成
+  - all指令use <span style="color: black;">相同</span> <span style="color: LimeGreen;">执行</span>时间完成
+    - every指令在一个时钟T 内完成
     -  <span style="color: LimeGreen;">C</span>P<span style="color: LightSkyBlue;">I</span> = 1
   - 指令执行方式
     -  <span style="color: Gold;">串</span>行执行
@@ -45,28 +43,28 @@
 
 <ul>
 
-#### 特征
+####  <span style="color: silver;">特征
 
 <ul>
 
-对不同类型的指令选用不同的执行步骤
+对different type' 指令选用不同的执行步骤
 - 指令执行T分配
   - 根据指令需要分配相应数量的周期
   - 特点：
-    - 不同指令可使用不同数量的时钟周期执行 (CPI>1)
-    - 不要求所有指令执行时间相同
-- 执行方式
-  - 指令之间采用 <span style="color: Gold;">串</span>行执行
-  - 一条指令执行完成后才开始下一条
+    - 不同指令can use不同数量的时钟周期执行 (CPI>1)
+    - don't request所有指令执行时间相同
+-  <span style="color: LimeGreen;">执行</span>way
+   - <span style="color: Gold;">串</span>行执行
+   - 一条指令执行完成后才开始下一条
 </ul>
 
 </ul>
 
-### <span style="color: LightSkyBlue;">流水</span><span style="color: Gold;">线</span>处理器  
+###  <span style="color: silver;"><span style="color: LightSkyBlue;">流水</span><span style="color: Gold;">线</span>处理器  
 
 <ul>
 
-#### 执行方式
+####  <span style="color: silver;">执行方式
 
 <ul>
 
@@ -75,8 +73,8 @@
   - 力争在每个时钟周期完成一条指令的执行过程
   - 只在理想情况下才能达到CPI=1
 - 特点
-  - 每个时钟周期启动一条指令
-  - 多条指令并行运行
+  - 每个时钟T 启动一条指令
+  - 多条指令<span style="color: green;">并行</span>运行
     - 不同指令同时处于不同执行步骤
 </ul>
 
