--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/指令执行/指令执行方案.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/指令执行/指令执行方案.md
@@ -8,7 +8,7 @@
   - 每个步骤完成指令的一部分功能
   - 几个步骤依次执行完成指令的全部功能
 - 指令执行步骤的安排方案
-  - 不同处理器use不同方案
+  - 不同处理器use不同方案[^1]
 
 >pro：单周期和多周期CPU的CPI（2020）  
 
@@ -89,3 +89,5 @@ T'n&t 均可不同
 
 </div>
 <div style="clear: both;"></div>
+
+[^1]: 3种~ pic示例补充https://blog.csdn.net/qq_42950838/article/details/113406943
