swiftrem_数据通路: 功能组成(组合逻辑_时序~)_结构(单 多 专)_eg(单)

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/基本结构.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/基本结构.md
@@ -12,16 +12,17 @@
 
 - 单总线结构的数据通路
   - 定义
-    - 将ALU及所有寄存器都连接到一条内部公共总线上
-  - 特点
-    - 结构简单
-    - 性能较低
-      - 原因：数据传输存在较多的冲突现象
+    - 将ALU&<span style="color: LimeGreen;">R</span>都connect到一条内部 <span style="color: LightSkyBlue;">公共</span> <span style="color: Gold;">Bus</span>上
+  -  <span style="color: Gold;">特点</span>
+     - 结构简单
+     - 性能较低
+      - 原因：
+        - 数据传输存在较多的冲突现象
   - 注意事项
-    - 此总线在CPU内部
-    - 不要与系统总线混淆
-      - 系统总线用于连接CPU、存储器和外设
-- 图5.8所示为单总线的数据通路和控制信号
+    - 此bus在CPU内部
+    - 不要与<span style="color: LightSkyBlue;">系统</span>bus混淆
+      - <span style="color: LightSkyBlue;">系统</span>~ 连接CPU、M和外设
+
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/0161e7b16de00d520d62405d382e730a37430111a550273cdc1cb28934a907c8.jpg)  
 图5.8单总线的数据通路和控制信号  
 
@@ -38,33 +39,36 @@
   - FR为标志寄存器
     - 用于存放ALU产生的标志信息
 
-  - 控制信号（带箭头的虚线）
-    - 写入控制
-      - 字母加"in"表示该部件充许写入
-      - 例如：MDRin表示内部总线上信息写入MDR
-    - 输出控制  
-      - 字母加"out"表示该部件充许输出
-      - 例如：MDRout表示MDR的内容送入内部总线
+<br>
 
-  - 三态门连接
-    - 能输出到总线的部件均通过三态门与内部总线相连
-    - 用途：控制该部件与内部总线之间数据通路的连接与断开
+  - <span style="color: Gold;">控制</span>信号（带箭头的虚线）
+    - 写入控制
+      - 字母+"in"表示该部件充许写入
+      - eg：MDRin表示内部总线上信息写入MDR
+    - 输出~  
+      - 字母+"out"表示该部件充许输出
+      - eg：MDRout表示MDR的内容送入内部总线
+
+  - <span style="color: Gold;">三态门</span>连接
+    - 能输出到总线的部件all through 三态门与内部总线相连
+    - 用途：
+      - 控制 该部件与内部总线 之间数据通路的<span style="color: LightSkyBlue;">连接</span>与<span style="color: green;">断开</span>
 >attention:  
-- 单周期处理器（$\mathrm{CPI}=1$）不能采用单总线方式
+- 单周期处理器（$\mathrm{CPI}=1$）不能采用  <span style="color: LimeGreen;">单</span>总线方式
   - 原因：
     - 单总线将所有寄存器都连接到一条公共总线上
     - 一个时钟内只允许一次操作
-    - 因此无法完成一条指令的所有操作
+    - thus 无法完成 一条指令'all操作
 </ul>
 
 ###  <span style="color: silver;">CPU内部<span style="color: SlateBlue;">多</span>总线方式  
 
 <ul>
 
-- CPU内部有两条或更多的总线时→双总线结构或多总线结构
-  - 结构特点
-    - 将所有寄存器的输入端和输出端都连接到多条公共通路上
-  - 与单总线对比
+- CPU内部有两条or more '总线时→双总线结构or多总线结构
+  -  <span style="color: Gold;">特点</span>
+     - all  <span style="color: LimeGreen;">R</span>的I端和O端都<span style="color: LightSkyBlue;">连接</span>to 多条公共通路上
+  - 与 <span style="color: LimeGreen;">单</span>总线对比
     - 单总线特点
       - 一个时钟内只充许传送一个数据
       - 指令执行效率很低
@@ -79,16 +83,16 @@
 
 <ul>
 
-- 根据指令执行过程中的数据和地址的流动方向安排连接电路
-  - 特点：
-    - 避免使用共享的总线
-    - 性能较高
-    - 硬件量大
+- 安排连接<span style="color: gray;">电路</span>(according to <span style="color: LightSkyBlue;">I</span>执行过程中的数据和地址的流动方向)
+  -  <span style="color: Gold;">特点</span>：
+     - 避免使用共享的总线
+     - 性能较高
+     - 硬件量大
 > attention
 - 总线分类：
-  - 内部总线
-    - 连接CPU内部各寄存器及运算部件之间的总线
-  - 系统总线
+  -  <span style="color: Gold;">内</span>部总线
+    - 连接CPU<u>内部</u>各 <span style="color: LimeGreen;">R</span>及运算部件之间的总线
+  - <span style="color: LightSkyBlue;">系统</span>总线 ← (Relative to the cpu,外部)
     - 连接同一台计算机系统的各部件之间的总线
     - 包括：CPU、内存和各类I/O接口
 </ul>
