--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/组成.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/组成.md
@@ -6,21 +6,21 @@
 
 - 组成数据通路的元件
   - 主要分为两类
-    - 组合逻辑元件
-    - 时序逻辑元件
+    -  <span style="color: LimeGreen;">组合</span>逻辑元件
+    - <span style="color: LightSkyBlue;">时序</span>~
 >pro：数据通路中的组合逻辑元件和时序逻辑元件（2021、2023）  
 
 ###  <span style="color: silver;"> <span style="color: LimeGreen;">组合</span><span style="color: Gold;">逻辑</span>元件（操作元件）  
 
 <ul>
 
-- 组合逻辑元件的特点
-  - 输出仅取决于当前输入
-  - 无存储单元和时钟控制
-  - 无反馈通路
-  - 信号单向传输
+-  <span style="color: Gold;">特点</span>:
+   - 输出only update to 当前输入
+   - 无存储单元和时钟控制
+   - 无反馈通路
+   - 信号单向传输
 
-- 常用组合逻辑元件类型
+- 常用~元件:
   - 加法器
   - 算术逻辑单元(ALU)
   - 译码器
@@ -32,28 +32,29 @@
 
 -  <span style="color: LimeGreen;">译</span><span style="color: LightSkyBlue;">码</span>器
      - 特点
-       - 虚线表示控制信号
-       - 可用于操作码或地址码译码
-     - 输入输出关系
-       - n位输入对应2^n种不同组合
-       - 有2^n个不同输出
+       - 虚线
+         - 表示 <span style="color: Gold;">控制</span>信号
+       - used in <span style="color: green;">操作</span><span style="color: LightSkyBlue;">码</span> or <span style="color: DarkRed;">地址</span><span style="color: LightSkyBlue;">码</span>译码
+     - I/O关系
+       - n位I → 2^n种不同组合
+       - 2^n个不同输出
 
-- 多路选择器(MUX)
+- <span style="color: RoyalBlue;">多</span>路<span style="color: LightSkyBlue;">选择</span>器(MUX)
   - 控制特性
-    - 需要控制信号Select
-    - 用于确定选择哪个输入被输出
+    - need <span style="color: Gold;">控制</span>信号Select
+    - to 确定选择which I被O
 
-- 三态门
+-  <span style="color: Gold;">三态</span>门
   - 基本功能
-    - 可视为一种控制开关
-    - 由控制信号EN决定信号线的通断
+    - regarded as一种控制开关
+    -  <span style="color: Gold;">控制</span>信号EN decide 信号线的通断
   - 工作状态
-    - EN=1时
+    - EN=1
       - 三态门被打开
-      - 输出信号等于输入信号
-    - EN=0时
-      - 输出端呈高阻态(隔断态) 
-      - 所连寄存器与总线断开
+      - 输出信号 = 输入信号
+    - EN=0
+      - O端呈高阻态(隔断态) 
+      - 所连R与Bus <span style="color: green;">断开</span>
 
 </ul>
 
@@ -61,25 +62,27 @@
 
 <ul>
 
-- 时序电路的特点
-  - 输出特性
-    - 输出与当前输入和以前输入都有关
+- 特点
+  - Out特性
+    - 输出与 当前输入&以前输入 都有关
   - 结构特性
     - 包含存储信号的记忆单元
 
-- 时序电路的工作条件
+- 工作条件
   - 时钟要求
-    - 必须在<span style="color: gray;">时钟节拍</span>下工作
+    - must in <span style="color: gray;">时钟节拍</span>下工作
 
-- 时序逻辑元件的类型
-  - 寄存器类
-    - 通用寄存器组
-    - 程序计数器
-    - 状态寄存器
-    - 移位寄存器
-    - 暂存寄存器
+- 类型
+  - R
+    - GPRs
+    - 移位R
+    - 暂存R
+    - 状态R
+<br>
+
+    - PC
     - 锁存寄存器
-  - 存储器类 
+  - M 
 
 </ul>
 
