checktest&sum_{ALU_CU&单 多}

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/🌟基本结构.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/数据通路/🌟基本结构.md
@@ -1,10 +1,10 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-##  <span style="color: silver;">基本<span style="color: green;">结构  
+##  <span style="color: silver;">基本<span style="color: green;">结构[^1]  
 
 <ul>
 
-###  <span style="color: silver;">CPU内部 <span style="color: LimeGreen;">单</span><span style="color: Gold;">总线</span>方式  
+###  <span style="color: silver;">CPU内部 <span style="color: LimeGreen;">单</span><span style="color: Gold;">总线</span>方式
 
 <ul>
 
@@ -104,3 +104,13 @@
 
 </div>
 <div style="clear: both;"></div>
+
+[^1]: use内部bus & dont use
+    ||内部bus|dont use|
+    |:--:|:--:|:--:|
+    | <span style="color: LimeGreen;">结构</span>|.|❍|
+    |性能|↓|↑|
+    |<span style="color: green;">硬件</span>|.|❍|
+    ||||
+    | <span style="color: Gold;">冲突</span>|✓||
+
