1/2swiftrem_CU: 结构&功能_硬布线_微程序(3/5concept)

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/硬布线~.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/硬布线~.md
@@ -8,16 +8,16 @@
 
 <ul>
 
-- 硬布线控制器基本特征：
-  - 由复杂的组合逻辑<u>门电路</u>和<u>触发器</u>构成
+- 特征：
+  - 由复杂的 <span style="color: LimeGreen;">组合</span>逻辑<u>门电路</u>和<u>触发器</u>构成
   -  即<span style="color: LimeGreen;">组合</span><span style="color: Gold;">逻辑</span>控制器
 
 - 工作原理：
-  - 根据以下因素发送微操作控制信号：
+  - 根据以下因素send微操作控制信号：
     - 指令要求
     - 当前时序
     - 内外部状态
-  - 控制信号发送遵循时间顺序
+  - 控制信号send遵循时间顺序
 </ul>
 
 ###  <span style="color: silver;"> <span style="color: Gold;">控制</span><span style="color: LightSkyBlue;">单元</span>结构
@@ -25,12 +25,12 @@
 <ul>
 
 - <span style="color: LightSkyBlue;">指令</span> <span style="color: LimeGreen;">操作</span>码
-  - 决定CU发出不同控制信号的关键
-    - 通过译码电路将n位操作码产生2^n个输出
+  - decide CU 不同 <span style="color: Gold;">控制</span>信号的key
+    - through <span style="color: green;">译</span><span style="color: LightSkyBlue;">码</span>电路将n位操作码产生2^n个输出
       - 每种~<span style="color: gray;">对应</span>一个Output送至CU
 
 ![image](https://bluejedis.github.io/picx-images-hosting/test/image.26ljcg4y79.webp) 
-图5.10带指令译码器和节拍输入的控制单元框图  
+图5.10带指令<span style="color: green;">译</span><span style="color: LightSkyBlue;">码</span>器&节拍输入的控制单元框图  
 
 </ul>
 
@@ -38,16 +38,16 @@
 
 <ul>
 
-- 指令信息
+- <span style="color: LightSkyBlue;">指令</span>信息
   - 经指令译码器译码产生
   - 操作码决定执行周期的不同操作
   - 与时钟配合产生不同控制信号
-- 时序系统信号
-  - 包括机器周期信号和节拍信号
-  - 控制单元需要时钟控制以有序发出控制信号
-- 执行单元反馈信息
-  - 包括各种标志
-  - 用于根据CPU当前状态产生控制信号
+-  <span style="color: Gold;">时</span><span style="color: green;">序</span>系统信号
+   - include <span style="color: gray;">机器</span>周期信号& <span style="color: LimeGreen;">节拍</span>信号
+   - need 时钟控制以有序发出控制信号
+- <span style="color: green;">执行</span>单元反馈信息
+  - include 各种 <span style="color: LimeGreen;">标志</span>
+    - used in根据CPU当前状态产生 <span style="color: Gold;">控制</span>信号
 
 </ul>
 
