--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/结构&功能.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/结构&功能.md
@@ -9,7 +9,7 @@
 <ul>
 
 - 五大功能部件及其连接关系(figure 5.9)
-  - 通过<span style="color: LightSkyBlue;">D</span>B <span style="color: DarkRed;">A</span>B  <span style="color: Gold;">C</span>B 连接在一起
+  - through <span style="color: LightSkyBlue;">D</span>B <span style="color: DarkRed;">A</span>B  <span style="color: Gold;">C</span>B 连接在一起
   - <span style="font-size: 14px;">  点画线框内的是 <span style="color: Gold;">C</span>U
 
 ####  <span style="color: silver;">连接关系
@@ -27,10 +27,11 @@
     - 通过<span style="color: LightSkyBlue;">D</span>B与其他部件传送数据
   - 控制器部件：
     - 从<span style="color: LightSkyBlue;">D</span>B接收指令信息
-      - 从<span style="color: LightSkyBlue;">A</span> <span style="color: LimeGreen;">L</span>U部件接收指令转移地址
-    - 送出指令地址到<span style="color: DarkRed;">A</span>B
+    - 从<span style="color: LightSkyBlue;">A</span> <span style="color: LimeGreen;">L</span>U部件接收指令转移地址
+      - 送出指令地址到<span style="color: DarkRed;">A</span>B
     - 向系统中的部件提供运行所需的控制信号
-    - ![image](https://bluejedis.github.io/picx-images-hosting/test/image.58hfcnfphn.webp)  
+
+![image](https://bluejedis.github.io/picx-images-hosting/test/image.58hfcnfphn.webp)  
 图5.9计算机硬件系统和控制器部件的组成  
 
 </ul>
@@ -61,7 +62,7 @@
 
 <ul>
 
-- 按 微操作控制信号的 <span style="color: black;">产生方式</span>，分为：
+- 按 微操作控制信号的 <span style="color: black;"> <span style="color: Gold;">产生</span>方式</span>，分为：
   - 硬布线CU
   - 微程序~
 - 两类控制器的异同：
