1/2swiftrem_CU: 微程序_2/5concept(P&R)_[μI]_组成&工作过程_编码&地址&格式

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/🌟微程序~/μI/组成 & 工作过程.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/🌟微程序~/μI/组成 & 工作过程.md
@@ -11,15 +11,15 @@
 - 主要部件：
   - 起始和转移地址形成部件：
     - 产生初始和后继微地址
-    - 保证微指令连续执行
-  - 微指令地址寄存器：
+    - 保证μ<span style="color: LightSkyBlue;">I</span>连续执行
+  - μ<span style="color: LightSkyBlue;">I</span>地址寄存器：
     - 接收微地址
-    - 为读取微指令做准备
-  - 控制存储器：
+    - 为读取μ<span style="color: LightSkyBlue;">I</span>做准备
+  - 控制M：
     - 核心部件
     - 存放各指令对应的微程序
-  - 微指令寄存器：
-    - 位数等于微指令字长
+  - μ<span style="color: LightSkyBlue;">I</span>寄存器：
+    - 位数=μ<span style="color: LightSkyBlue;">I</span>字长
 
 ![image](https://bluejedis.github.io/picx-images-hosting/test/image.86tph81sgb.webp) 
 图5.11微程序控制器的基本结构  
@@ -32,13 +32,13 @@
 
 - 执行机器指令的过程：
   1. 执行取指令公共操作：
-     - 将取指微程序入口地址送入μPC
-     - 从 <span style="color: Gold;">C</span><span style="color: gray;">M</span>读出微指令送入μIR
-     - 完成后机器指令存入指令寄存器
+     - 将取指微程序入口地址 → μPC
+     - 从 <span style="color: Gold;">C</span><span style="color: gray;">M</span>读出μ<span style="color: LightSkyBlue;">I</span> → μIR
+     - 完成后机器指令→IR
   2. 产生微程序入口地址：
-     - 由机器指令操作码通过微地址形成部件产生
-     - 送入μPC
-  3. 执行微指令：
+     - 由机器指令操作码通过微地址形成部件 产生
+     -  → μPC
+  3. 执行μ<span style="color: LightSkyBlue;">I</span>：
      - 从CM逐条取出
      - 依次执行
   4. 循环执行：
@@ -53,11 +53,11 @@
 <ul>
 
 - 对应关系：
-  - 一条机器指令对应一个微程序
-  - 公共操作可统一编程：
-    - 取指令操作微程序
-    - 间址周期微程序
-    - 中断周期微程序
+  - 一条机器指令 correspond 一个微程序
+  - 公共操作可<span style="color: LightSkyBlue;">统一</span>编程：
+    - <span style="color: LightSkyBlue;">取</span>指令操作微程序
+    -  <span style="color: LimeGreen;">间</span>址周期微程序
+    -  <span style="color: Gold;">中断</span>周期微程序
 - 控制存储器内容：
   - 机器指令对应的微程序
   - 公共操作的微程序
