swifttest_过[CU]_[选择]对应的题

--- a/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/硬布线~.md
+++ b/re_knowledge/CPU/功能&结构_指令执行_数据通路_CU/CU/硬布线~.md
@@ -39,9 +39,9 @@
 <ul>
 
 - <span style="color: LightSkyBlue;">指令</span>信息
-  - 经指令译码器译码产生
-  - 操作码决定执行周期的不同操作
-  - 与时钟配合产生不同控制信号
+  - 经 ID 译码产生
+    - 操作码决定执行周期的不同操作
+  - 与时钟配合产生不同 <span style="color: Gold;">控制</span>信号
 -  <span style="color: Gold;">时</span><span style="color: green;">序</span>系统信号
    - include <span style="color: gray;">机器</span>周期信号& <span style="color: LimeGreen;">节拍</span>信号
    - need 时钟控制以有序发出控制信号
