CPU_PartII; swiftrem_异常&中断: 内3外2_相应过程

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/~ 响应过程.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/~ 响应过程.md
@@ -23,11 +23,14 @@
 
 <ul>
 
-- 在保存断点和程序状态期间，不能被新的中断打断
+- in 保存断点 & 程序状态期间
+  - 不能被新的中断打断
 - 实现方式：
   - 通过设置"中断允许"（IF）触发器
-  - IF=1：开中断，允许响应中断
-  - IF=0：关中断，不允许响应中断
+  - IF=1：开~
+    - 允许响应中断
+  - IF=0：<span style="color: green;">关</span>~
+    - not允许响应中断
 
 </ul>
 
@@ -41,13 +44,14 @@
     - or <span style="color: gray;">特定</span> <span style="color: LimeGreen;">R</span>
   - 保存方式
     - usually <span style="color: Gold;">栈</span>
-      - 目的：支持异常或中断的嵌套
+      - goal：
+      - 支持异常or中断' 嵌套
 - <span style="color: LightSkyBlue;">程序</span>状态保存
   - 保存内容
     - 被中断时的 程序状态字寄存器<span style="color: LightSkyBlue;">P</span><span style="color: Gold;">S</span><span style="color: gray;">W</span>内容
   - 保存位置
     - ~(同<span style="color: green;">断点</span>)
-  - 目的
+  - goal
     - 为异常和中断返回时<span style="color: gray;">恢复</span>到<span style="color: LightSkyBlue;">P</span><span style="color: Gold;">S</span><span style="color: gray;">W</span>中
 
 </ul>
@@ -67,11 +71,12 @@
             - <span style="color: gray;">确定</span>异常和中断 <span style="color: GreenYellow;">类型</span>
 - <span style="color: green;">硬件</span>~（ <span style="color: Gold;">向量</span><span style="color: green;">中断</span>）
   - 中断向量:
-    - 定义：异常或中断处理程序的<span style="color: gray;">首</span><span style="color: DarkRed;">地址
-  - 存储结构:
-    - 中断向量<span style="color: gray;">表</span>存放所有<span style="color: green;">中断</span> <span style="color: Gold;">向量</span>
+    - define：
+      - 异常或中断处理程序的<span style="color: gray;">首</span><span style="color: DarkRed;">地址
+  - Storage structure:
+    - 中断vector<span style="color: LightSkyBlue;">表</span> store 所有<span style="color: green;">中断</span> <span style="color: Gold;">向量</span>
   -  <span style="color: LimeGreen;">映射</span>关系:
-      - every异常或中断指定一个中断类型号
+      - every异常或中断 指定一个中断类型号
       -  <span style="color: LimeGreen;">类型</span>号和<span style="color: green;">中断</span> <span style="color: Gold;">向量</span>一一对应
 
 </ul>
@@ -82,12 +87,13 @@
 
 <ul>
 
-- 整个响应过程是不可被打断的
-- 处理流程：
-  - 响应过程结束后，CPU从PC中取出对应中断服务程序的第一条指令开始执行
-  - 执行直至中断返回
+- whole响应过程是不可被打断的
+- process：
+  - 响应过程结束后
+    - CPU从PC中取出对应中断服务程序的第一条<span style="color: LightSkyBlue;">I</span> 开始执行
+    - till 中断<span style="color: green;">返回</span>
   - 由CPU通过执行中断服务程序完成
-  - 整个中断处理过程是由软/硬件协同实现的
+  - 软/硬件协同
 
 </ul>
 
