--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/分类.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/分类.md
@@ -23,7 +23,7 @@
     - 地址越界
     - 缺页
 
-</ul>
+
 
 ####  <span style="color: silver;">按发生 <span style="color: LimeGreen;">原因</span>和 <span style="color: Gold;">返回</span><span style="color: gray;">方式
 
@@ -39,7 +39,8 @@
   - 系统、设备或组件在运行过程中出现的一种 <span style="color: Gold;">状态</span>
     - → 系统、设备或组件无法按照预期执行其功能
 
-- Detection time：<span style="color: LightSkyBlue;">指令</span>启动<span style="color: gray;">后</span>、 <span style="color: LimeGreen;">执行</span>结束<span style="color: gray;">前</span>
+- Detection time：
+  - <span style="color: LightSkyBlue;">指令</span>启动<span style="color: gray;">后</span>、 <span style="color: LimeGreen;">执行</span>结束<span style="color: gray;">前</span>
 - 常见~
   - <span style="color: gray;">非法</span> <span style="color: LimeGreen;">操作</span>码
   -  <span style="color: Gold;">缺</span> <span style="color: gray;">段</span>/<span style="color: LightSkyBlue;">页
