checktest&sum_异常3&中断_断点_return

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/🌟分类.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/异常&中断/🌟分类.md
@@ -46,9 +46,10 @@
   -  <span style="color: Gold;">缺</span> <span style="color: gray;">段</span>/<span style="color: LightSkyBlue;">页
   - 除数为0
 - <span style="color: green;">处理</span>
-  - 可恢复~
+  - 🌟可恢复~
     - <span style="color: Gold;">缺</span> <span style="color: gray;">段</span>/<span style="color: LightSkyBlue;">页</span>：
-      - 调入所需 <span style="color: gray;">段</span>/<span style="color: LightSkyBlue;">页</span>面后back <span style="color: Gold;">F</span>ault
+      - 调入所需 <span style="color: gray;">段</span>/<span style="color: LightSkyBlue;">页</span>面后
+      - back <span style="color: Gold;">F</span>ault
   - 不可恢复~
     - <span style="color: gray;">非法</span> <span style="color: LimeGreen;">操作</span>码/除数为0：
       -  <span style="color: GreenYellow;">终止</span>进程执行
@@ -58,14 +59,16 @@
 #####  <span style="color: silver;">（2）自<span style="color: SlateBlue;">陷</span>（<span style="color: SlateBlue;">T</span>rap）  
 
 <ul>
+人为设定
 
 >pro：自陷的原理和性质（2020）  
 
-- 定义：<span style="color: gray;">预先</span>安排的"异常"事件
+- define：
+  - <span style="color: gray;">预先</span>安排的"异常"事件
   - <span style="font-size: 12px;">(CPU主动发出
 - 实现方式
   -  <span style="color: Gold;">特殊</span><span style="color: LightSkyBlue;">指令</span>
-  - 特殊控制 <span style="color: Gold;">标志</span>
+  - 特殊控制 <span style="color: LightSkyBlue;">标志</span>
 - process：
   - 执行完<span style="color: SlateBlue;">T</span>rap
   - according to类型进行处理
