swiftrem_I流水线: 3冒险5阶段&2指标3super

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/结构冒险~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/结构冒险~.md
@@ -8,15 +8,16 @@
 
 - 流水线冒险概述：
   - 定义：
-    - 后续指令无法正确执行而引起流水线阻塞的现象
+    - 后续指令无法正确执行而引起流水线  <span style="color: Gold;">阻塞</span>的现象
   - 分类（根据导致原因）：
-    - 结构冒险
-    - 数据冒险 
-    - 控制冒险
+    -  <span style="color: LimeGreen;">结构</span>冒险
+    - <span style="color: LightSkyBlue;">数据</span>~ 
+    -  <span style="color: Gold;">控制</span>~
 
 - 指令操作说明：
   - 不同类型指令在各流水段的操作是不同的
   - 具体操作详见表5.2表5.2不同类型指令在各流水段中的操作
+
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/0e6ae322ef1d230d3622eda619a0b7d751d40c5ad99cf6bbc3f88c1bdf5ad624.jpg)  
 
 这几类指令将会在下面介绍流水线冲突时涉及。  
