--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/基本实现.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/基本实现.md
@@ -5,9 +5,9 @@
 <ul>
 
 - 单周期实现特点
-  - 不是所有指令都需要5个阶段
-  - 时钟周期取决于最慢指令
-  - 时钟频率受限于最长数据通路
+  - 不是所有指令all need 5个阶段
+  - 时钟T update to 最慢指令
+  - 时钟f 受限于 最长数据path
 
 >pro：流水线时钟周期的设计（2009）  
 
@@ -16,11 +16,11 @@
 <ul>
 
 - 流水段<span style="color: gray;">个数</span>原则
-  - 以最复杂指令所需功能段个数为准
+  - 以 most复杂指令needed 功能段个数为准
 - 流水段<span style="color: LightSkyBlue;">长度</span>原则
-  - 以最复杂操作所需时间为准
-- eg:
-  - 各阶段时间
+  - 以 most复杂操作needed时间为准
+- eg1: ← single <span style="color: LightSkyBlue;">I</span>
+  - 各edge时间
     - 取指：200ps
     - 译码：100ps
     - 执行：150ps
@@ -31,12 +31,13 @@
     - 流水线设计
       - 每个流水段长度：200ps（按最长段对齐）
       - 单条指令执行时间：1000ps
-      - 比串行执行增加：250ps
+        - 比串行执行+：250ps
   - 执行效率比较
     - 程序包含N条指令时
       - 单周期串行执行时间：N × 750ps
       - 流水线执行时间：(N + 4) × 200ps
 
+↑单看是增加的,但多条是高效的[见图](#jump1)
 </ul>
 
 ###  <span style="color: Gold;">逻辑</span> <span style="color: LimeGreen;">结构  
@@ -81,9 +82,11 @@
 
 <ul>
 
-- 执行效率比较
-  - 流水线方式：时刻10T 有6条指令完成
-  - 串行方式：.. 仅2条指令完成
+- <span id="jump1">效率compare</span>
+  - <span style="color: LightSkyBlue;">流水</span><span style="color: Gold;">线方</span>式：
+    - 时刻10T 有6条指令完成
+  -  <span style="color: Gold;">串</span>行方式：
+     - .. 仅2条指令完成
 - 适用场景
   -  <span style="color: gray;">连续</span><span style="color: Gold;">任务</span>、<span style="color: LightSkyBlue;">指令</span>执行
   - float运算流水线 only suit</span>运算密集型应用
