--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/高级流水线技术.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/高级流水线技术.md
@@ -4,9 +4,11 @@
 
 <ul>
 
-- 有两种增加指令级并行的策略：
-  - 多发射技术：采用多个内部功能部件，使流水线功能段能同时处理多条指令
-  - 超流水线技术：通过增加流水线级数来使更多的指令同时在流水线中重叠执行
+- 有两种 <span style="color: Gold;">增加</span>指令级<span style="color: green;">并行</span>的策略：
+  - 多发射技术：
+    - 采用多个内部功能部件，使流水线功能段能同时处理多条指令
+  - 超流水线技术：
+    - 通过增加流水线级数来使更多的指令同时在流水线中重叠执行
 
 ### <span style="color: RoyalBlue;">多</span><span style="color: Gold;">发射</span><span style="color: silver;">技术
 
@@ -21,7 +23,7 @@
 -  <span style="color: GreenYellow;">动态</span>多发射技术
   - 特点
     - 并发性
-      - 每个时钟周期内可并发多条独立指令
+      - 每个时钟周期内可<span style="color: green;">并发</span>多条独立指令
     - 编译执行
       - 以并行操作方式将两条或多条指令编译并执行
     - 硬件要求
@@ -63,10 +65,11 @@
 
 - 原理：
   - 通过 <span style="color: black;">提高</span>流水线 <span style="color: Gold;">主频</span>来提升性能
-  - 流水线功能段划分越多，时钟周期越短
-  - 指令吞吐率越高
+    - 流水线功能段划分越多，时钟周期越短
+    - 指令吞吐率越高
 - 限制：
-  - 流水线级数越多，用于流水寄存器的<span style="color: gray;">开销</span>越<span style="color: gray;">大</span>
+  - 流水线级数越多
+    - 用于流水寄存器的<span style="color: gray;">开销</span>越<span style="color: gray;">大</span>
   - 流水线级数有限制，NOT越多越好
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/742aac8f955fdb4c6ca794363252545db1e5f37ff8e48bc846bf71986d0fa0d6.jpg)  
