have 2types left❓checktest&sum_I流水线: 3冒险5阶段&2指标3super //left: ①m段流水线 吞吐能力;②judge哪些 I 间 no数据冒险 ←mubu in details

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/结构冒险~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/结构冒险~.md
@@ -37,14 +37,14 @@
     - 第i条LOAD指令MEM段访存与第i+3条指令F段取指令同时发生
     - 解决方法：暂停后一条指令操作一个时钟周期
 
-- 解决方案：
+- 解决method：
   1. 暂停策略
      - 前一指令访存时，暂停后续相关指令一个时钟周期
   2. 硬件冗余
      - 设置多个独立部件
-     - 如：寄存器读写口独立
-     - 如：数据存储器和指令存储器分离
-     - 现代Cache采用数据Cache和指令Cache分离
+       - 寄存器读写口独立
+       - 数据存储器和指令存储器分离
+       - 现代Cache采用数据Cache和指令Cache分离
 
 表5.3 用暂停后续指令的方法解决访存冲突
 ![image](https://bluejedis.github.io/picx-images-hosting/test/image.7zqhnkwshy.webp)
