--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/🌟数据~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/🌟数据~.md
@@ -76,7 +76,7 @@
 
 </ul>
 
-#####  <span style="color: silver;">3. <span style="color: LightSkyBlue;">load</span>-use
+#####  <span style="color: silver;">add:  <span style="color: Gold;">load</span>-use
 
 <ul>
 
