--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/控制~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/指令流水线/冒险(阻塞)与处理/控制~.md
@@ -13,7 +13,8 @@
 - 定义： <span style="color: LimeGreen;">改变</span> 指令执行<span style="color: gray;">顺序</span>导致的 <span style="color: Gold;">冲突</span>
 - Trigger condition：
   - 执行  <span style="color: LimeGreen;">转移</span>/<span style="color: green;">返回</span> 指令
-  - 发生 <span style="color: LimeGreen;">中断</span>或 <span style="color: Gold;">异常</span>
+    - 发生 <span style="color: LimeGreen;">中断</span>或 <span style="color: Gold;">异常</span>
+    - 改变 <span style="color: LimeGreen;">PC</span>值 → 断流
 
 </ul>
 
@@ -25,7 +26,7 @@
   -  <span style="color: Gold;">推迟</span>后续指令执行
   - 插入<span style="color: gray;">nop</span>指令
 
-表5.8用插入空操作的办法解决控制冲突
+表[^1]5.8用插入空操作的办法解决控制冲突
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/5d0c7063bc5e9cb5cf392f3925551cca3ebbfb37ad2e468043801a4c994d2fcf.jpg)  
 
 </ul>
@@ -39,9 +40,9 @@
    - 硬件阻塞( <span style="color: Gold;">stall</span>)
 
 2. 分支预测
-   - 简单(静态)预测
+   - 简单(<span style="color: LightSkyBlue;">静</span>态)预测
      - 预设条件不满足时继续顺序执行
-   - 动态预测
+   -  <span style="color: LimeGreen;">动</span>态预测
      - 基于历史情况动态调整
      - 具有较高预测准确率
 
@@ -60,3 +61,6 @@ Cache缺失的处理过程也会引起流水线阻塞。
 
 </div>
 <div style="clear: both;"></div>
+
+[^1]:bne:
+    - branch if not equal,不等于时跳转
