swiftrem_多处理器: 4xIxD_3多线程_多核&共享

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/共享内存.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/共享内存.md
@@ -1,6 +1,6 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-## <span style="color: RoyalBlue;">共享<span style="color: Gold;">内存~
+##  <span style="color: LimeGreen;">共享<span style="color: Gold;">内存~
 
 <ul>
 
@@ -8,17 +8,17 @@
 
 <ul>
 
-- 多处理器特征：
-  - 共享单一物理地址空间
-- 处理器间通信：
-  - 通过存储器中的共享变量实现
+- 多处理器<span style="color: Gold;">特征</span>：
+  - 共享 <span style="color: green;">单一</span>物理地址空间
+- 处理器间<span style="color: Gold;">通信</span>：
+  - M中' <span style="color: LimeGreen;">共享</span><span style="color: Lime;">变量</span>实现
   - 通信方式：
-    - 所有处理器可使用存取指令
+    - all处理器can use<span style="color: LightSkyBlue;">存</span><span style="color: LimeGreen;">取</span>指令
     - 可访问存储器任意位置
-- 地址空间使用：
-  - 支持物理地址空间共享
-  - 同时允许：
-    - 在各自虚拟地址空间中
+- <span style="color: DarkRed;">地址</span>空间使用：
+  - <span style="color: gray;">物理</span><span style="color: DarkRed;">地址</span>空间 <span style="color: LimeGreen;">共享</span>
+  - At the same time allow：
+    - 在各自 <span style="color: SlateBlue;">虚拟</span>地址空间中
     - 独立运行程序
 
 </ul>
@@ -33,12 +33,13 @@ Uniform Memory Access
 <ul>
 
 - 特点：
-  - 每个处理器对所有存储单元的访问时间大致相同
-  - 访问时间与处理器和访问位置无关
-- 架构特征：
-  - 内存控制器未整合进CPU
-  - 访存操作需经过北桥芯片
-  - CPU通过前端总线和北桥芯片相连
+  - every处理器to all 存储单元'访问t 大致相同
+    - 访问t 
+    - 与 处理器or访问位置 无关
+- 架构<span style="color: Gold;">特征</span>：
+  - 内存控制器 未整合进CPU
+  - 访存操作need through 北桥芯片
+  - CPU connect with 北桥芯片 through前端 <span style="color: Gold;">Bus</span> 
 
 </ul>
 
@@ -46,32 +47,32 @@ Uniform Memory Access
 
 <ul>
 
-- 特点：
-  - 存储器访存速度不同：
-    - 访问速度取决于处理器和访问位置
-    - 主存被分割分配给不同处理器
-- 架构优势：
+-  <span style="color: Gold;">特点</span>：
+  - M 访存v不同：
+    - 访问v contingent to 处理器&访问位置
+    - 主M被分割分配 to不同处理器
+- 架构 <span style="color: LimeGreen;">优势</span>：
   - 消除UMA架构的瓶颈：
-    - 内存控制器集成到CPU内部
-    - 每个CPU有独立内存控制器和本地内存
-    - CPU间通过QPI总线相连
+    - 内存控制器 集成到CPU内部
+    - every CPU have 独立内存控制器 & 本地内存
+    - CPU间through QPI总线相连
 
 </ul>
 
 </ul>
 
-###  <span style="color: silver;">共享  <span style="color: GreenYellow;">变量</span><span style="color: LimeGreen;">访问</span>控制
+###   <span style="color: LimeGreen;">共享</span><span style="color: GreenYellow;">变量</span> <span style="color: LimeGreen;">访问</span><span style="color: Gold;">控制</span>
 
 <ul>
 
-- 问题：
-  - 多个处理器可能同时访问同一共享变量
-- 解决方案：
+- q：
+  - 多个处理器might同时访问同一<span style="color: LimeGreen;">共享</span><span style="color: GreenYellow;">变量</span>
+- 解决method：
   - 同步操作：
-    - 对共享变量加锁控制互斥访问
-    - 访问控制：
-      - 一次只允许一个处理器获得锁
-      - 其他处理器需等待解锁
+    - 对<span style="color: LimeGreen;">共享</span><span style="color: GreenYellow;">变量</span>加锁控制互斥访问
+    - <span style="color: LimeGreen;">访问</span><span style="color: Gold;">控制</span>：
+      - 一次only allow一个处理器获得锁
+      - 其他处理器need等待解锁
 
 </ul>
 
