--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/多核~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/多核~.md
@@ -24,13 +24,13 @@
   - 使得每个核在同一时刻都有线程在执行
 
 - 与单核的区别：
-  - 多核执行特点：
-    - 多个线程物理上并行执行
+  - 多<span style="color: LimeGreen;">核</span>执行特点：
+    - 多个线程 物理上并行执行
     - 实现真正意义的并行
-    - 同一时刻可有多线程并行
-  - 单核执行特点：
+    - <u>同一时刻</u>可有多 <span style="color: Gold;">线程</span><span style="color: green;">并行</span>
+  - 单核 ~：
     - 多线程以交错方式执行
-    - 同一时刻仅能执行一个线程
+    - 同一时刻only执行一个线程
 
 </ul>
 
@@ -41,12 +41,17 @@
 - 假设要将四颗圆石头滚到马路对面：
   - 滚动每颗石头平均需花费1分钟
   - 不同处理方式：
-    - 串行处理器：逐一滚动每颗石头，花费4分钟
-    - 双核处理器：两个人各滚两颗，花费2分钟
-    - 向量处理器：用木板同时推动四块石头，理论上1分钟
+    - 串行处理器：
+      - 逐一滚动每颗石头，花费4分钟
+    - 双核~：
+      - 两个人各滚两颗，花费2分钟
+    -  <span style="color: Gold;">向量</span>~：
+       - 用木板同时推动四块石头，理论上1分钟
   - 对比：
-    - 多核处理器相当于拥有多名工人
-    - 向量处理器拥有同时对多件事进行相同操作的方法
+    - 多<span style="color: LimeGreen;">核</span>处理器
+      - 多名工人
+    - 向量处理器
+      - 同时对多件事进行same操作的方法
 
 </ul>
 
