--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/硬件多线程.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/硬件多线程.md
@@ -21,17 +21,22 @@
       - 显著减少线程切换开销
 
 ### 硬件多线程的实现方式
+<ul>
 
 #### <span style="color: gray;">细</span><span style="color: silver;">粒度~
 
 <ul>
 
-- 多个线程之间轮流<span style="color: gray;">交叉</span>执行指令
-  - <u>多个线程</u>之间的指令是不相关的，可以乱序并行执行
+- 多个线程之间 <span style="color: LightSkyBlue;">轮流</span><span style="color: Gold;">交叉</span>执行指令
+  - <u>多个线程</u>之间的指令
+    - is不相关的
+    - can乱序<span style="color: green;">并行</span>执行
   - 处理器能在 every时钟周期切换线程 ←  <span style="color: Gold;">线程</span>级 <span style="color: green;">并行</span>
-    - 例如：
-      - 在时钟周期i，将线程A中的多条指令发射执行
-      - 在时钟周期 $\mathrm{i}+1$ ，将线程B中的多条指令发射执行
+    - eg：
+      - 时钟周期i
+        - 将线程A中的多条指令发射执行
+      - 时钟周期 $\mathrm{i}+1$ 
+        - 将线程B中的多条指令发射执行
 
 </ul>
 
@@ -41,22 +46,23 @@
 
 - 粗粒度多线程执行特征：
   - <u>同一线程</u> 指令 <span style="color: LimeGreen;">连续</span>执行
-    - 在多个时钟周期内执行同一线程的指令序列
+    - 在多个时钟周期内
+    - 执行同一线程的指令序列
   - 线程切换触发条件
-    - 仅在当前线程出现较大开销阻塞时切换
-    - 典型场景如Cache缺失
+    - 仅在当前线程出现<u>较大开销</u>阻塞时切换
+    - 典型场景:
+      - Cache<span style="color: SlateBlue;">缺失</span>
 
-- 主要特点：
-  - 流水线操作
-    - 阻塞时需清除被阻塞的流水线
-    - 新线程执行前需重载流水线
-  - 切换开销
-    - 比细粒度多线程的切换开销更大
+-  <span style="color: Gold;">特点</span>：
+   - 流水线操作
+     - 阻塞时需清除被阻塞的流水线
+     - 新线程执行前需重载流水线
+   - 切换开销
+      - 比细粒度多线程的切换开销更大
 
-- 技术特征总结：
-  - 并行性实现
-    - 实现了<span style="color: LightSkyBlue;">指令</span>级<span style="color: green;">并行
-    - 未实现线程级并行
+- 技术特征：
+  - <span style="color: LightSkyBlue;">指令</span>级<span style="color: green;">并行
+  - 未实现  <span style="color: Gold;">线程</span>级并行
 
 </ul>
 
@@ -72,6 +78,7 @@ Simultaneous Multi-Threading
   - 执行特点：
     - 在同一个时钟周期中
       - 发射多个不同线程中的多条指令执行
+
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/fe12e3816bacd5ce1624427dc34539902f856a1a779a1dfcb27e86ac5ec6d5bd.jpg)  
 
 - Intel处理器中的超线程（Hyper-threading）
