checktest&sum_多处理器: 3多线程_2共享内存_多核

--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/多核~.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/多核~.md
@@ -1,6 +1,6 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-## <span style="color: purple;">多</span><span style="color: LimeGreen;">核</span><span style="color: silver;">~
+## <span style="color: purple;">多</span><span style="color: LimeGreen;">核</span><span style="color: silver;">处理器
 
 <ul>
 
