--- a/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/硬件多线程.md
+++ b/re_knowledge/CPU/异常&中断_指令流水线_多处理器/多处理器/硬件多线程.md
@@ -81,14 +81,15 @@ Simultaneous Multi-Threading
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/fe12e3816bacd5ce1624427dc34539902f856a1a779a1dfcb27e86ac5ec6d5bd.jpg)  
 
-- Intel处理器中的超线程（Hyper-threading）
+- Intel处理器中的<span style="color: SlateBlue;">超</span>线程（Hyper-threading,HT）
   - 基本定义
     - SMT
   - 硬件实现
-    - 在一个单处理器或单个核中设置了两套线程状态部件
-  - 资源共享
-    - 共享高速缓存
-    - 共享功能部件
+    - 一个 <span style="color: LimeGreen;">单</span>处理器or <span style="color: LimeGreen;">单</span>个<span style="color: LimeGreen;">核</span>中
+    - set 两套线程状态部件
+  -  <span style="color: Gold;">资源</span> <span style="color: LimeGreen;">共享</span>
+     - 共享 <span style="color: SlateBlue;">Cache</span>
+     - ~ 功能部件
 
 </ul>
 
