BUS; swiftrem_概述: concept_分类_系统Bus结构_性能指标

--- a/re_knowledge/Bus/概述/分类.md
+++ b/re_knowledge/Bus/概述/分类.md
@@ -8,7 +8,7 @@
 
 <ul>
 
-> pro： 总线相关的概念与特点（2016、2017）  
+> pro： <span style="color: Gold;">Bus</span>相关的概念与特点（2016、2017）  
 
 <ul>
 
@@ -27,7 +27,7 @@
 
 - <span style="color: gray;">computer system</span> 内各<u>功能部件</u>之间相互连接
 - 按传输信息内容分为:
-  > pro：数据总线上传输的内容（2011）  
+  > pro：数据<span style="color: Gold;">Bus</span>上传输的内容（2011）  
 
 <ul>
 
@@ -56,13 +56,14 @@
 <ul>
 
   - 用途：传输各种命令、反馈和定时信号
-  - 典型信号：时钟、复位、总线请求/充许等
+  - 典型信号：时钟、复位、<span style="color: Gold;">Bus</span>请求/充许等
 
 </ul>
 
 注意区分：
-- 数据通路：各功能部件通过数据总线连接形成的数据传输路径
-- 数据总线：数据传输的媒介
+- 数据<span style="color: LightSkyBlue;">通路</span>：
+  - 各功能部件through数据<span style="color: Gold;">Bus</span>连接形成的数据传输路径
+- 数据<span style="color: Gold;">Bus</span>：数据传输的<span style="color: green;">媒介</span>
 
 </ul>
 
@@ -73,9 +74,9 @@
 <ul>
 
 - 用途：连接中低速I/O设备
-- 特点：通过I/O接口与系统总线相连
-- 目的：将低速设备与高速总线分离
-- 例如：USB、PCI总线
+- 特点：通过I/O接口与系统<span style="color: Gold;">Bus</span>相连
+- 目的：将低速设备与高速<span style="color: Gold;">Bus</span>分离
+- 例如：USB、PCI<span style="color: Gold;">Bus</span>
 
 </ul>
 
@@ -83,8 +84,9 @@
 
 <ul>
 
-- 又称外部总线
-- 用途：计算机系统之间或与其他系统的信息传送
+- 又称外部<span style="color: Gold;">Bus</span>
+- 用途：
+  - 计算机系统之间或与其他系统的信息传送
 
 </ul>
 
@@ -100,8 +102,8 @@
 
 <ul>
 
-- 使用统一时钟进行同步
-- 在规定时钟节拍内进行规定总线操作
+- 统一时钟 进行同步
+- 规定时钟节拍内 进行 规定<span style="color: Gold;">Bus</span>操作
 
 </ul>
 
@@ -109,9 +111,9 @@
 
 <ul>
 
-- 无统一时钟
+- 无~
 - 使用信号握手方式协调
-- 总线操作时序不固定
+- <span style="color: Gold;">Bus</span>操作 <span style="color: LightSkyBlue;">时序</span>不固定
 
 </ul>
 
@@ -125,11 +127,12 @@
 
 <ul>
 
-- 结构：一条双向或两条单向数据线
-- 传输：按比特位串行顺序
+- 结构：
+  - 一条双向 or 两条单向数据线
+- 传输：按比特位 <span style="color: Gold;">串</span>行顺序
 - 特点：
-  - 效率低于并行总线
-  - 适合长距离通信
+  - 效率 < 并行<span style="color: Gold;">Bus</span>
+  - suite长距离通信
   - 要求不高
 
 </ul>
@@ -138,24 +141,25 @@
 
 <ul>
 
-- 结构：多条双向数据线
+- 结构：
+  - <span style="color: RoyalBlue;">多</span>条双向 数据线
 - 传输：多比特位同时传输
 - 特点：
   - 效率较高
-  - 存在延迟和干扰问题
-  - 适合近距离通信
+  - 延迟 & 干扰问题
+  - suite 近距离通信
 
 > attention  
 
-- 并行总线并不一定总比串行总线快，它们适合不同的场景
-  - 并行总线特点：
+- 并行<span style="color: Gold;">Bus</span>并不一定总比串行<span style="color: Gold;">Bus</span>快，它们适合不同的场景
+  - 并行<span style="color: Gold;">Bus</span>特点：
     - 多个数据位同时传输
-    - 需要考虑数据的协同性
+      - need 数据的协同性
     - 存在线路之间的相互干扰
-    - 工作频率无法持续提高
-  - 串行总线特点：
-    - 可通过不断提高工作频率来提高传输速度
-    - 最终速度可能超越并行总线
+    - 工作频率can't持续提高
+  - 串行<span style="color: Gold;">Bus</span>特点：
+    - can through 不断提高工作f 来提高 传输v
+    - final v might 超越并行<span style="color: Gold;">Bus</span>
 
 </ul>
 
