--- a/re_knowledge/Bus/概述/概念.md
+++ b/re_knowledge/Bus/概述/概念.md
@@ -6,12 +6,14 @@
 
 - 早期计算机的连接方式
   - 各部件之间通过单独连线互连
-  - 这种方式称为分散连接
-- 发展到总线连接
-  - 原因：I/O设备种类和数量增多
-  - 目的：更好地解决I/O设备和主机之间连接的灵活性
+  - ↑ 分散连接
+- evolve into <span style="color: Gold;">Bus</span>连接
+  - 原因：
+    - I/O设备 种类和数量 增多
+  - 目的：
+    - 更好地解决I/O设备和主机之间连接的灵活性
 - 进一步发展 
-  - 提出各类总线标准
+  - 提出各类 <span style="color: Gold;">Bus</span>标准
   - 目的：简化设计
 
 <ul>
@@ -62,7 +64,7 @@
 
 <ul>
 
-  - 发出总线请求且获得总线控制权的设备
+  - 发出 <span style="color: Gold;">Bus</span>请求 & 获得 <span style="color: Gold;">Bus</span>控制权的设备
 
 </ul>
 
@@ -70,7 +72,7 @@
 
 <ul>
 
-   - <span style="color: gray;">only can</span>响应主~发来的总线命令
+   - <span style="color: gray;">only can</span>响应主~发来的 <span style="color: Gold;">Bus</span>命令
 
 </ul>
 
