--- a/re_knowledge/Bus/概述/系统总线的 结构.md
+++ b/re_knowledge/Bus/概述/系统总线的 结构.md
@@ -1,6 +1,6 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-##  <span style="color: silver;">系统总线的 <span style="color: LimeGreen;">结构</span>  
+##  <span style="color: silver;"><span style="color: LightSkyBlue;">系统</span><span style="color: Gold;">Bus</span>的 <span style="color: LimeGreen;">结构</span>  
 
 <ul>
 
@@ -8,20 +8,20 @@
 
 <ul>
 
-####  <span style="color: silver;"><span style="color: LightSkyBlue;">单</span>总线结构  
+####  <span style="color: silver;"><span style="color: LightSkyBlue;">单</span><span style="color: Gold;">Bus</span>结构  
 
 <ul>
 
 - 基本特征：
-  - CPU、主存、I/O设备都挂在一组总线上
+  - CPU、主存、I/O设备都挂在一组<span style="color: Gold;">Bus</span>上
   - 允许设备间直接交换信息
   - 无需中间设备干预
 - 注意事项：
-  - ~~单总线不是指只有一根信号线~~
-  - 可分为地址总线、数据总线和控制总线
+  - ~~单<span style="color: Gold;">Bus</span>不是指只有一根信号线~~
+  - 可分为地址<span style="color: Gold;">Bus</span>、数据<span style="color: Gold;">Bus</span>和控制<span style="color: Gold;">Bus</span>
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/a8b75e0bcbcbe7c1e22d71e2fa26222c4fe36d1dfe9f77fe38f2dbbcd9c3075a.jpg)  
-图6.1单总线结构  
+图6.1单<span style="color: Gold;">Bus</span>结构  
 
 - 优点：
   - 结构简单
@@ -30,7 +30,7 @@
 - 缺点：
   - 带宽低
   - 负载重
-  - 只能争用唯一总线
+  - 只能争用唯一<span style="color: Gold;">Bus</span>
   - 不支持并发传送
 
 </ul>
@@ -40,34 +40,41 @@
 <ul>
 
 - 组成：
-  - 主存总线：<u>CPU</u>、<u>主存</u>和<u>通道</u>  间传送数据
-  - I/O总线：外部设备与通道间传送数据
+  - 主存<span style="color: Gold;">Bus</span>：
+    - <u>CPU</u>、<u>主存</u>和<u>通道</u>  间传送数据
+  - I/O<span style="color: Gold;">Bus</span>：
+    - 外部设备与通道间传送数据
 
 - 优：
-  - 实现存储器总线和I/O总线分离
-  - 低速I/O设备从单总线分离
+  - 实现存储器<span style="color: Gold;">Bus</span>和I/O<span style="color: Gold;">Bus</span>分离
+  - 低速I/O设备从单<span style="color: Gold;">Bus</span>分离
 - 缺：
-  - 需要增加通道等硬件设备
+  - need 增加通道等硬件设备
 
 </ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d7065d4dc41e8445bd893d3f0057b7a4fbb7dfb06e816e4830f2970c62d12561.jpg)  
+图6.2双&三 <span style="color: Gold;">Bus</span>结构  
 
 ####  <span style="color: silver;"><span style="color: orange;">三</span>~
 
 <ul>
 
 - 组成：
-  - <span style="color: orange;">主存</span>总线：CPU和内存间传送信息
-  - <span style="color: green;">I/O</span>~：CPU和外设间通信
-  - <span style="color: DarkRed;">DMA</span>~：内存和高速外设间直接传送数据
+  - <span style="color: orange;">主存</span><span style="color: Gold;">Bus</span>：
+    - CPU和内存间传送信息
+  - <span style="color: green;">I/O</span>~：
+    - CPU和外设间通信
+  - <span style="color: DarkRed;">DMA</span>~：
+    - 内存和高速外设间直接传送数据
 
-![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d7065d4dc41e8445bd893d3f0057b7a4fbb7dfb06e816e4830f2970c62d12561.jpg)  
-图6.2双总线结构  
+
 
 - 优点：
   - 提高I/O设备性能
   - 提高系统吞吐量
 - 缺点：
-  - 任意时刻only use 1 总线
+  - 任意时刻only use 1 <span style="color: Gold;">Bus</span>
   - 系统工作效率较低
 
 </ul>
@@ -78,11 +85,11 @@
 
 <ul>
 
-> pro：总线标准的英文缩写（2010）  
+> pro：<span style="color: Gold;">Bus</span>标准的英文缩写（2010）  
 
 <ul>
 
-#### <span style="color: LightSkyBlue;">系统</span><span style="color: silver;">总线
+#### <span style="color: LightSkyBlue;">系统</span><span style="color: silver;"><span style="color: Gold;">Bus</span>
 
 <ul>
 
@@ -96,7 +103,7 @@
 
 - 工业标准体系结构
 - 特点：
-  - 最早出现的系统总线
+  - 最早出现的系统<span style="color: Gold;">Bus</span>
   - 传输速率低
   - CPU占用率高
   - 占用硬件中断资源
@@ -112,7 +119,7 @@
   - 对ISA完全兼容
   - 支持突发传送
 
-> pro：区分设备总线和局部总线（2013）  
+> pro：区分设备<span style="color: Gold;">Bus</span>和局部<span style="color: Gold;">Bus</span>（2013）  
 
 </ul>
 
@@ -134,7 +141,7 @@
 
 - 视频电子标准协会
 - 特点：
-  - 32位局部总线
+  - 32位局部<span style="color: Gold;">Bus</span>
   - 针对多媒体PC高速传送需求
 
 </ul>
@@ -146,7 +153,7 @@
 - 外部设备互连
 - 应用：显卡、声卡、网卡等
 - 特点：
-  - 高速外围总线
+  - 高速外围<span style="color: Gold;">Bus</span>
   - 与处理器时钟频率无关
   - 支持即插即用
 
@@ -176,7 +183,7 @@
   - 支持双向传输模式
   - 支持全双工模式
 
-> pro：PCI-E总线的特点（2017）  
+> pro：PCI-E<span style="color: Gold;">Bus</span>的特点（2017）  
 
 </ul>
 
@@ -206,13 +213,13 @@
 
 <ul>
 
-- 通用串行总线
+- 通用串行<span style="color: Gold;">Bus</span>
 - 特点：
   - 即插即用
   - 热插拔
   - 强连接能力
 
-> pro：USB总线的特点（2012）  
+> pro：USB<span style="color: Gold;">Bus</span>的特点（2012）  
 
 </ul>
 
