swifttest_过[概述]_对应的选择题

--- a/re_knowledge/Bus/概述/🌟性能指标.md
+++ b/re_knowledge/Bus/概述/🌟性能指标.md
@@ -128,7 +128,7 @@ n时钟T-->传输T
   - 工作$f$
   - 带宽
 - 三者关系：$\color{green}带宽\color{black}=\color{blue}宽度\color{black}\times工作\color{orange}f$
-  - eg： <span style="color: Gold;">Bus</span>工作频率为22MHz， <span style="color: Gold;">Bus</span>宽度为16位，则 <span style="color: Gold;">Bus</span>带宽 $\scriptstyle=22\mathbf{M}\times(16/8)=44\mathbf{M}\mathrm{B/s}$
+  - eg： <span style="color: Gold;">Bus</span>工作频率为22MHz， <span style="color: Gold;">Bus</span>宽度为16位，则 <span style="color: Gold;">Bus</span>带宽 $\scriptstyle=22\mathbf{MHz}\times(16/8)=44\mathbf{M}\mathrm{B/s}$
 
 </ul>
 
